--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -27,20 +27,20 @@
               <ng-template pTemplate="body" let-rowData let-columns="columns" >
                   <tr>
                       <td *ngFor="let col of columns">
-                          <ng-container *ngIf="[col.field]=='NgayThue' || [col.field]=='NgayTra'">
+                          <ng-container *ngIf="[col.field]=='ngaythue' || [col.field]=='ngaytra'">
                           {{rowData[col.field] | date: 'dd/MM/yyyy'}}
                         </ng-container>
                         
-                        <ng-container *ngIf="[col.field]!='NgayThue'&&[col.field]!='NgayTra' &&[col.field]!='TrangThai'">
+                        <ng-container *ngIf="[col.field]!='ngaythue'&&[col.field]!='ngaytra' &&[col.field]!='trangthai'">
                             {{rowData[col.field]}}
                         </ng-container>
 
-                        <ng-container *ngIf="[col.field]=='TrangThai'">
-                            <ng-container *ngIf="rowData[col.field]==0">
+                        <ng-container *ngIf="[col.field]=='trangthai'">
+                            <ng-container *ngIf="rowData[col.field]==false">
                               
                                 <span><i class="fa fa-circle icon icon-blue" style="color: grey;"></i></span>
                             </ng-container>
-                            <ng-container *ngIf="rowData[col.field]==1">
+                            <ng-container *ngIf="rowData[col.field]==true">
                               
                                 <span><i class="fa fa-circle icon icon-blue" style="color: green;"></i></span>
                             </ng-container>
