--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -47,13 +47,13 @@
             <div class=" col-md-6 pr-md-1">
               <div class=" form-group">
                 <label> Ngày Thuê </label>
-                <input type="date" class="form-control" formControlName="ngaythue">
+                <input type="date" class="form-control" formControlName="ngaythue" [(ngModel)]="input1">
               </div>
             </div>
             <div class=" col-md-6 pl-md-1">
               <div class=" form-group">
                 <label>Ngày Trả</label>
-                <input type="date" class="form-control" formControlName="ngaytra">
+                <input type="date" class="form-control" formControlName="ngaytra" [(ngModel)]="input2">
               </div>
             </div>
           </div>
