--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -26,15 +26,15 @@
                 <ng-template pTemplate="body" let-rowData let-columns="columns" >
                     <tr>
                         <td *ngFor="let col of columns">
-                            <ng-container *ngIf="[col.field]=='NgayThue' || [col.field]=='NgayTra'">
+                            <ng-container *ngIf="[col.field]=='ngaythue' || [col.field]=='ngaytra'">
                             {{rowData[col.field] | date: 'dd/MM/yyyy'}}
                           </ng-container>
                           
-                          <ng-container *ngIf="[col.field]!='NgayThue'&&[col.field]!='NgayTra' &&[col.field]!='TrangThai'">
+                          <ng-container *ngIf="[col.field]!='ngaythue'&&[col.field]!='ngaytra' &&[col.field]!='trangthai'">
                               {{rowData[col.field]}}
                           </ng-container>
   
-                          <ng-container *ngIf="[col.field]=='TrangThai'">
+                          <ng-container *ngIf="[col.field]=='trangthai'">
                               <ng-container *ngIf="rowData[col.field]==0">
                                 
                                   <span><i class="fa fa-circle icon icon-blue" style="color: grey;"></i></span>
