--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -82,7 +82,7 @@
               <div class=" form-group">
                 <label>Trạng Thái</label>
                 <div class="slider">
-                  <p-inputSwitch formControlName="trangthai"></p-inputSwitch>
+                  <p-inputSwitch formControlName="trangthai"  [(ngModel)]="checked"></p-inputSwitch>
                 </div>
               </div>
             </div>
