--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -11,19 +11,19 @@
           <div class=" row">
             <div class=" col-md-5 pr-md-1">
               <div class=" form-group">
-                <label> Mã WiFi</label>
+                <label> Mã WiFi</label> <label style="color: #ec250d;"> *</label>
                 <input class=" form-control" placeholder="Mã WiFi" type="text" formControlName="mawifi" />
               </div>
             </div>
             <div class=" col-md-3 px-md-1">
               <div class=" form-group">
-                <label> SDT SIM </label>
+                <label> SDT SIM </label> <label style="color: #ec250d;"> *</label>
                 <input class=" form-control" placeholder="SDT SIM" type="text" formControlName="sdtsim" />
               </div>
             </div>
             <div class=" col-md-3 px-md-1">
               <div class=" form-group">
-                <label> Mã Sim</label>
+                <label> Mã Sim</label> <label style="color: #ec250d;"> *</label>
                 <input class=" form-control" placeholder="Mã Sim" type="text" formControlName="masim" />
               </div>
             </div>
@@ -32,7 +32,7 @@
           <div class=" row">
             <div class=" col-md-6 pr-md-1">
               <div class=" form-group">
-                <label> Họ Tên </label>
+                <label> Họ Tên </label> <label style="color: #ec250d;"> *</label>
                 <input class=" form-control" placeholder="Họ Tên" type="text" formControlName="hoten" />
               </div>
             </div>
