--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -149,6 +149,8 @@
         </div>
         <div class=" card-footer">
           <button class=" btn btn-fill btn-danger" type="submit" (click)="submit()">Save</button>
+   
+          <button class=" btn " style="background:rgba(224, 46, 22, 0.6)" (click)="cancel()">Cancel</button>
         </div>
       </div>
     </div>
