--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -47,7 +47,7 @@ form {
     max-width:350px;
     border-radius: 5px;
     /* background-color: #FF4500; */
-    background-image: linear-gradient(to right, rgba(10, 85, 160, 0.6) 0%, rgba(27, 126, 226, 0) 100%);
+    background: rgba(18, 106, 207, 0.6) ;
   }
   
   /* Add a hover effect for buttons */
