--- a/src/app/pages/user/user.component.css
+++ b/src/app/pages/user/user.component.css
@@ -4,6 +4,9 @@
 
 .form-check-input-monthly 
     .ng-pristine .ng-valid .ng-touched { 
-    width: 25x !important; 
+    width: 25px !important; 
     height: 25px !important; 
+}
+.ui-dropdown-label-container{
+    height: 35px !important;
 }
