--- a/src/app/pages/wifi/wifi.component.html
+++ b/src/app/pages/wifi/wifi.component.html
@@ -3,7 +3,7 @@
         <div class=" col-md-12">
             <div class=" card">
                 <div class=" card-header">
-                    <h4 class=" card-title">Table</h4>
+                    <h4 class=" card-title">DS WIFI</h4>
 
                     <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Add"></button>
 
