--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -4,7 +4,7 @@
       <div class=" col-md-12">
         <div class=" card">
           <div class=" card-header">
-            <h4 class=" card-title">Danh Sách KH cũ</h4>
+            <h4 class=" card-title">Danh Sách KH Hủy</h4>
           </div>
           <div class=" card-body">
             <div class=" table-responsive">
