--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -4,7 +4,7 @@
     <div class=" col-md-8">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" title">Create Profile</h4>
+          <h4 class=" title">Thông Tin Khách Hàng</h4>
         </div>
         <div class=" card-body">
 
@@ -80,9 +80,13 @@
 
             <div class=" col-md-4 pl-md-1">
               <div class=" form-group">
-                <label>Trạng Thái</label>
-                <div class="slider">
-                  <p-inputSwitch formControlName="trangthai"  [(ngModel)]="checked" (click)="onClick($event)"></p-inputSwitch>
+                <label>Trạng Thái KH</label>
+                <!-- <div class="slider">
+                  <p-inputSwitch formControlName="trangthai" [(ngModel)]="checked" (click)="onClick($event)">
+                  </p-inputSwitch>
+                </div> -->
+            <div>
+                  <p-dropdown  [options]="trangthaikh" formControlName="trangthaikhdd" (onChange)="onchange()"></p-dropdown>
                 </div>
               </div>
             </div>
@@ -104,14 +108,16 @@
                   <tbody>
                     <tr [formGroup]="thanhtoanform">
                       <td *ngFor="let column of cols1">
-                        <input type="checkbox" class="form-check-input-monthly" style="width: 24px !important;height: 24px !important; margin-top: 4px;" formControlName="thanhtoan{{column}}">
+                        <input type="checkbox" class="form-check-input-monthly"
+                          style="width: 24px !important;height: 24px !important; margin-top: 4px;"
+                          formControlName="thanhtoan{{column}}">
                       </td>
 
                     </tr>
 
                   </tbody>
                 </table>
-<br/>
+                <br />
                 <table class="table_monthly">
 
                   <thead class=" text-primary" style="border-bottom:1px solid #344675 ;">
@@ -125,7 +131,9 @@
                   <tbody>
                     <tr [formGroup]="thanhtoanform">
                       <td *ngFor="let column of cols2">
-                        <input type="checkbox" class="form-check-input-monthly" style="width: 24px !important;height: 24px !important; margin-top: 4px;" formControlName="thanhtoan{{column}}">
+                        <input type="checkbox" class="form-check-input-monthly"
+                          style="width: 24px !important;height: 24px !important; margin-top: 4px;"
+                          formControlName="thanhtoan{{column}}">
                       </td>
 
                     </tr>
@@ -149,7 +157,7 @@
         </div>
         <div class=" card-footer">
           <button class=" btn btn-fill btn-danger" type="submit" (click)="submit()">Save</button>
-   
+
           <button class=" btn " style="background:rgba(224, 46, 22, 0.6)" (click)="cancel()">Cancel</button>
         </div>
       </div>
