--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,23 +8,31 @@
         </div>
         <div class=" card-body">
           <div class=" table-responsive">
-            <p-table  #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="30" [tableStyle]="{'table-layout':'auto'}" >
-                <!-- <ng-template pTemplate="caption">
+            <div style="text-align: left">  
+              <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 0.5em;" class="ui-button-success"></button>
+
+        </div>
+        <br/>
+            <p-table  #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="30" [tableStyle]="{'table-layout':'auto'}" > 
+              
+            
+            
+              <!-- <ng-template pTemplate="caption">
                     <div style="text-align: left">  
                         <input  type="text" pInputText  placeholder="Global Filter" (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:40%">
                           
                         <i class="fa fa-search" style="margin:4px 4px 4px 4px"></i>
                     </div>
                 </ng-template> -->
-                <ng-template pTemplate="caption">
+                <!-- <ng-template pTemplate="caption">
                   <div style="text-align: left">  
                         <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 0.5em;" class="ui-button-success"></button>
         
                   </div>
-              </ng-template>
+              </ng-template> -->
               <ng-template pTemplate="header" let-columns class=" text-primary">
                   <tr >
-                      <th *ngFor="let col of columns" [ngStyle]="{'width': col.width}" [pSortableColumn]="col.field">
+                      <th *ngFor="let col of columns"  [pSortableColumn]="col.field">
                           {{col.header}}
                         
                           <ng-container *ngIf="[col.field]=='mawifi'">
@@ -38,9 +46,9 @@
                       <th></th>
                   </tr>
                   <tr >
-                    <th *ngFor="let col of columns" [ngStyle]="{'width': col.width}" [ngSwitch]="col.header">
-                      <input *ngSwitchCase="'Mã WiFi'" pInputText type="text" (input)="tt.filter($event.target.value, col.field, 'contains')">
-                      <p-dropdown *ngSwitchCase="'Thanh Toán'" style="height: 25px;" [style]="{'width':'30%'}"  [options]="trangthaikh" (onChange)="onchange()"></p-dropdown>
+                    <th *ngFor="let col of columns"  [ngSwitch]="col.header">
+                      <input *ngSwitchCase="'Mã WiFi'" pInputText type="text"  (input)="tt.filter($event.target.value, col.field, 'contains')">
+                      <p-dropdown *ngSwitchCase="'Thanh Toán'" style="height: 25px;" [style]="{'width':'100%'}"  [options]="trangthaitt" (onChange)="onchange($event.value)"></p-dropdown>
 
                
                     </th>
