--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -20,6 +20,7 @@
                         <th *ngFor="let col of columns" [ngStyle]="{'width': col.width}">
                             {{col.header}}
                         </th>
+                        <th></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-rowData let-columns="columns" >
@@ -51,8 +52,13 @@
                           <a class=" fab fa-facebook" href="{{rowData[col.field]}}" target="_blank" style="font-size:20px;text-align: center;"> </a>
                           
                         </ng-container>
+                        
                         </td>
-                       
+                        <td style="text-align:center">
+                          <a (click)="selectNetWithButton(rowData)" routerLink="/user"
+                              [state]="(rowData)"><i class="fas fa-address-card"
+                                  style="font-size:20px"></i></a>
+                      </td>
                        
                     </tr>
                 </ng-template>
